# GameTools

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
examples/Collision2D/: main.cpp
examples/InputManager/: main.cpp
examples/TimeManager/: main.cpp
examples/Vector2D/: main.cpp
include/: Collision2D.h  InputManager.h  Shape2D.h  TimeManager.h  Vector2D.h
src/: InputManager.cpp  TimeManager.cpp
